# smallangle

./: README.md  mkdocs.yml  pyproject.toml
docs/: examples.md  index.md  references.md
src/smallangle/: smallangle.py
